tests/fail/cast/boolean2float.tox


fn main() {
  print true as float;//error: Cannot cast `bool` to type `float`
}